fixed color mess, removed photos, and center aligning post headings

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,7 @@ body {
   /*justify-content: space-between;*/
   align-items: center;
   justify-items: center;
-  background: var(--agnostic-secondary-hover);
+  /* background: var(--agnostic-secondary-hover); */
   color: var(--agnostic-font-color);
   
 }
@@ -38,6 +38,10 @@ body {
   max-width: 60em;
   margin-left: auto;
   margin-right: auto;
+}
+
+.blog h1, .blog h2, .blog h3, .blog h4 {
+  text-align: center;
 }
 
 /* Project and blog pages show list bullets again, and also centered. */
@@ -62,9 +66,11 @@ main {
   margin-left: 0;
   margin-right: 0;
   align-content: space-evenly;
+  /* leftover from grid demo
   justify-content: space-evenly;
   align-items: center;
   justify-items: center;
+  */
   width: clamp(26ch, 90%, 100%);
 }
 
